--- a/src/kit/blocks/registration-card/registration-card.scss
+++ b/src/kit/blocks/registration-card/registration-card.scss
@@ -17,7 +17,7 @@
   }
 
   &__gender {
-    margin-bottom: 22px;
+    margin-bottom: 17px;
   }
 
   &__birthday {
@@ -49,10 +49,19 @@
   }
 
   &__login-offer {
-      margin-top: 30px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      color: $dark_shade100;
+    margin-top: 25px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    color: $dark_shade100;
+  }
+
+  &__login-text {
+    margin-top: 5px;
+  }
+
+  &__login-button {
+    margin-top: 5px;
   }
 }
