--- a/src/pages/kit-pages/form-elements/form-elements.scss
+++ b/src/pages/kit-pages/form-elements/form-elements.scss
@@ -71,7 +71,7 @@ $form-elements-point_small: 630px;
   }
 
   &__toggles {
-    margin-top: 39px;
+    margin-top: 34px;
   }
 
   &__toggle-on {
